# LocaleSwitcher

./: .gitignore  Locale_Switcher.bat  README.md  locale_Switcher.py  pyproject.toml
OLD/: Locale_Switcher.ps1
