[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Locale-Switcher"
version = "1.0.1"
description = "GUI per cambiare il locale di sistema su Windows"
authors = [
    { name = "Mizu" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sv-ttk>=2.5"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Systems Administration"
]
